@@ -2215,11 +2215,11 @@ AXObjectCache* Document::axObjectCache() const
     // document.  This is because we need to be able to get from any WebCoreAXObject
     // to any other WebCoreAXObject on the same page.  Using a single cache allows
     // lookups across nested webareas (i.e. multiple documents).
-    Document* document = topDocument();
-    ASSERT(document == this || !m_axObjectCache);
-    if (!document->m_axObjectCache)
-        document->m_axObjectCache = adoptPtr(new AXObjectCache(this));
-    return document->m_axObjectCache.get();
+    Document* topDocument = this->topDocument();
+    ASSERT(topDocument == this || !m_axObjectCache);
+    if (!topDocument->m_axObjectCache)
+        topDocument->m_axObjectCache = adoptPtr(new AXObjectCache(this));
+    return topDocument->m_axObjectCache.get();
 }
 
 void Document::setVisuallyOrdered()
